--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -9,3 +9,12 @@ nav {
 body {
     padding-top: 50px;
   }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a :hover {
+    color: blueviolet;
+}
