--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <!-- Navbar -->
+<section class="py-5">
     <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top shadow">
         <div class="container">
             <a href="#" class="navbar-brand">Hotline Bling</a>
@@ -45,6 +46,7 @@
             </div>
         </div>
     </nav>
+</section>
 {% block content %}
 {% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
